--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,9 +6,21 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+
+  <ion-list>
+    <ion-item>
+      <ion-label fixed>item name</ion-label>
+      <ion-input [(ngModel)]="newItem" type="text"></ion-input>
+    </ion-item>
+  </ion-list>
+
+  <button ion-button full (click)="addItem()">add item</button>
+  <hr>
+
+  <ion-list>
+    <button ion-item *ngFor="let item of items">
+      {{ item }}
+    </button>
+  </ion-list>
 </ion-content>
